--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-material-menu",
-  "version": "1.2.0",
+  "name": "@alessiocancian/react-native-material-menu",
+  "version": "1.2.2",
   "description": "Material Menu for React Native",
   "main": "src/index.js",
   "keywords": [
@@ -61,5 +61,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/mxck/react-native-material-menu.git"
-  }
+  },
+  "typings": "./index.d.ts"
 }
